gitlab/dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: gitlab
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deployment-config.name: gitlab
  strategy:
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: gitlab
        deployment-config.name: gitlab
    spec:
      containers:
      - image: gitlab/gitlab-ce
        imagePullPolicy: Always
        name: default-container
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
  test: false
  triggers:
  - type: ConfigChange
