gitlab/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlab
  name: gitlab
  namespace: default
spec:
  clusterIP: 172.30.25.194
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30985
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: gitlab
  type: LoadBalancer
