gitlab/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gitlab
  name: gitlab
spec:
  port:
    targetPort: 80
  to:
    kind: Service
    name: gitlab
    weight: 100
